# openclaw-cli

./: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml  run_multi_web.sh  run_web.sh
chatbot/: __init__.py  server.py  user_sessions.py
chatbot/static/: app.css  app.js  index.html
demo/: __init__.py  callback_pool_demo.py  example_responses_input.json  openai_http_demo.py  openresponses_http_demo.py  session_pool_demo.py  tools_invoke_demo.py  websocket_protocol_demo.py
doc/: callback_pool.md  chatbot_web.md  diagnostic_agent_video_prompts.md  gateway_interfaces.md  multi_chatbot_web.md  password_config_and_connect_to_gateway.md  session_pool.md
multi_chatbot/: __init__.py  config_store.py  runner.py  server.py
multi_chatbot/static/: app.css  app.js  index.html
scripts/: logs_openclaw_gateway.sh  restart_openclaw_gateway.sh  start_openclaw_gateway.sh  status_openclaw_gateway.sh  stop_openclaw_gateway.sh  test_gateway_with_password.sh  test_openclaw_gateway_chat.sh
src/: openclaw_gateway_chat_test.py
src/openclaw_client/: __init__.py  callback.py  cli.py  client.py  device_auth.py  pool.py
tests/e2e/: test_real_gateway.py
tests/unit/: test_callback.py  test_client.py  test_pool.py
